# tcvn-compliance-copilot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.observability.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py
apps/api/src/tcvn_copilot/: __init__.py  cli.py  config.py  main.py
apps/api/src/tcvn_copilot/api/: deps.py
apps/api/src/tcvn_copilot/api/middleware/: request_context.py  security_headers.py
apps/api/src/tcvn_copilot/api/routes/: __init__.py  auth.py  compliance.py  health.py  projects.py  standards.py  uploads.py
apps/api/src/tcvn_copilot/core/: errors.py  logging.py  security.py  telemetry.py
apps/api/src/tcvn_copilot/db/: session.py
apps/api/src/tcvn_copilot/db/models/: __init__.py  compliance.py  drawing.py  project.py  standard.py  user.py
apps/api/src/tcvn_copilot/domain/compliance/: engine.py  rules.py
apps/api/src/tcvn_copilot/rag/: chunker.py  embedder.py  ingest.py  llm.py  retriever.py
apps/api/src/tcvn_copilot/rag/extractors/: __init__.py  cad.py  ifc.py  image.py  pdf.py
apps/api/src/tcvn_copilot/rag/prompts/: compliance.py  extraction.py
apps/api/src/tcvn_copilot/schemas/: auth.py  compliance.py  drawing.py  project.py  standard.py
apps/api/src/tcvn_copilot/services/: report.py  storage.py
apps/api/src/tcvn_copilot/services/templates/: non_compliance.html.j2
apps/api/src/tcvn_copilot/workers/: celery_app.py  tasks.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_auth_flow.py
apps/api/tests/unit/: test_chunker.py  test_health.py  test_rules.py  test_security.py
apps/web/: .dockerignore  .eslintrc.json  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/projects/: page.tsx
apps/web/src/app/projects/[id]/: page.tsx
apps/web/src/app/projects/new/: page.tsx
apps/web/src/app/standards/: page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/lib/: api.ts
apps/web/src/styles/: globals.css
docs/: api.md  architecture.md  deployment.md  standards.md
docs/adr/: 0001-pgvector-over-qdrant.md  0002-rules-then-llm.md
infra/docker/: otel-collector.yaml  postgres-init.sql  prometheus.yml
infra/k8s/base/: api-deployment.yaml  api-service.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.example.yaml  web-deployment.yaml  web-service.yaml  worker-deployment.yaml
infra/k8s/overlays/dev/: kustomization.yaml
infra/k8s/overlays/prod/: kustomization.yaml
scripts/: bootstrap.sh  seed_demo.py
