[project]
name = "tcvn-copilot"
version = "0.1.0"
description = "RAG copilot for TCVN/QCVN compliance review of AEC drawings"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "TCVN Compliance Copilot contributors" }]

dependencies = [
    # --- Web framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.40.0",
    "python-multipart>=0.0.12",

    # --- Config & validation ---
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # --- Cache & queue ---
    "redis>=5.2.0",
    "celery>=5.4.0",

    # --- LLM / RAG ---
    "anthropic>=0.39.0",
    "sentence-transformers>=3.3.0",
    "tiktoken>=0.8.0",
    "rank-bm25>=0.2.2",

    # --- Document parsing ---
    "pymupdf>=1.24.13",
    "pdfplumber>=0.11.4",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
    "ezdxf>=1.3.5",          # DXF / DWG-ish parsing
    "ifcopenshell>=0.8.0",   # IFC / BIM parsing — optional; gracefully degrades
    "python-docx>=1.1.2",

    # --- Object storage ---
    "boto3>=1.35.50",

    # --- Auth & security ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "argon2-cffi>=23.1.0",

    # --- Observability ---
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-redis>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.18.0",

    # --- Reporting ---
    "jinja2>=3.1.4",
    "weasyprint>=63.0",       # HTML→PDF for non-compliance reports

    # --- Misc ---
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "respx>=0.21.1",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "types-passlib",
    "types-python-jose",
    "ipython>=8.29.0",
    "pip-audit>=2.7.3",
    "freezegun>=1.5.1",
]

[project.scripts]
tcvn-copilot = "tcvn_copilot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcvn_copilot"]

# =========================================================================
# Ruff — lint + format
# =========================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",         # pycodestyle + pyflakes
    "I",                   # isort
    "B",                   # flake8-bugbear
    "C4",                  # comprehensions
    "UP",                  # pyupgrade
    "N",                   # naming
    "ASYNC",
    "S",                   # bandit
    "SIM",
    "RET",
    "TID",
    "PL",                  # pylint
    "RUF",
]
ignore = [
    "E501",     # line length — let formatter handle
    "PLR0913",  # too many args — common in FastAPI deps
    "S101",     # assert in tests is fine
    "PLC0415",  # lazy imports are intentional for heavy deps (weasyprint, fitz, ...)
    "B008",     # FastAPI's idiomatic pattern (Depends/File/Form in defaults)
    "S105",     # `token_type` literal triggers it falsely; we audit JWT code separately
    "SIM108",   # prefer explicit if/else for readability over ternary
    "RET504",   # the explicit named return value reads better in many cases
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004", "ARG"]
"alembic/**" = ["N", "S"]

[tool.ruff.lint.isort]
known-first-party = ["tcvn_copilot"]

# =========================================================================
# Mypy
# =========================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "ifcopenshell.*", "ezdxf.*", "weasyprint.*", "pytesseract.*", "fitz.*",
    "pgvector.*", "celery.*", "boto3.*", "botocore.*", "yaml",
    "sentence_transformers.*",
]
ignore_missing_imports = true

# =========================================================================
# Pytest
# =========================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=tcvn_copilot",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "integration: requires postgres + redis (deselect with -m 'not integration')",
    "slow: slow-running test",
]

[tool.coverage.run]
source = ["src/tcvn_copilot"]
branch = true
omit = ["*/alembic/*", "*/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
